Fixed Gecko browser

--- a/MultiFireX/App.config
+++ b/MultiFireX/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="BrowserMode" value="Webkit"/>
+    <add key="BrowserMode" value="All"/>
     <add key="HomePage" value="http://www.google.co.uk"/>
     <add key="XULRunnerPath" value="C:\XULRunner\"/>
   </appSettings>
